CAY-2994 cgen: improve path handling